fixed gap

--- a/src/styles/pages/Profile.module.scss
+++ b/src/styles/pages/Profile.module.scss
@@ -59,13 +59,12 @@
             text-transform: capitalize;
         }
 
-        .phone {
+        .contact {
             font-weight: 300;
+            display: flex;
+            gap: .5rem;
         }
 
-        .email {
-            font-weight: 300;
-        }
     }
 
     .navigation {
@@ -84,6 +83,13 @@
             text-decoration: none;
             text-transform: uppercase;
             transition: .15s;
+
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
 
             .icon {
                 font-size: 1.5rem;
